version/derive/tests/ui/fail_invalid_range_less.stderr
error: The end version should be higher then the start version.
 --> tests/ui/fail_invalid_range_less.rs:5:1
  |
5 | declare_versioned!(VersionedMessage 2..1);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `declare_versioned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `VersionedMessage` in this scope
 --> tests/ui/fail_invalid_range_less.rs:7:1
  |
7 | #[version(n = 1, versioned = "VersionedMessage")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the attribute macro `version` (in Nightly builds, run with -Z macro-backtrace for more info)
